--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,16 @@
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="8dp">
 
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <!--<ListView-->
+            <!--android:id="@+id/listView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/beganegrond"
+            android:cropToPadding="true"
+            android:id="@+id/plattegrond"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
