--- a/app/src/main/res/layout/location_activity.xml
+++ b/app/src/main/res/layout/location_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context="stage.hoogtebepaling5.Location.LocationClass">
+    tools:context="stage.hoogtebepaling5.Location.LocationActivity">
 
     <ImageView
         android:layout_height="wrap_content"
